// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnsupportedSSGVersion expect to render help sign 1`] = `
<span
  style={
    Object {
      "display": "inline-block",
      "margin": "1em",
    }
  }
>
  <TooltipOrPopover
    tooltipProps={
      Object {
        "messageVariant": undefined,
      }
    }
    variant="popover"
  >
    <span
      className="pf-u-mr-xs"
      style={
        Object {
          "cursor": "pointer",
        }
      }
    >
      <ExclamationTriangleIcon
        color="var(--pf-global--warning-color--100)"
        noVerticalAlign={false}
        size="sm"
      />
    </span>
  </TooltipOrPopover>
  Unsupported text
  <TooltipOrPopover
    tooltipProps={
      Object {
        "messageVariant": undefined,
      }
    }
    variant="popover"
  >
    <span
      className="pf-u-ml-xs"
      style={
        Object {
          "cursor": "pointer",
        }
      }
    >
      <OutlinedQuestionCircleIcon
        color="currentColor"
        noVerticalAlign={false}
        size="sm"
      />
    </span>
  </TooltipOrPopover>
</span>
`;

exports[`UnsupportedSSGVersion expect to render no warning sign 1`] = `
<span
  style={
    Object {
      "display": "inline-block",
      "margin": "1em",
    }
  }
>
  Unsupported text
</span>
`;

exports[`UnsupportedSSGVersion expect to render singular message 1`] = `
<span
  style={
    Object {
      "display": "inline-block",
      "margin": "1em",
    }
  }
>
  <TooltipOrPopover
    tooltipProps={
      Object {
        "messageVariant": "singular",
      }
    }
    variant="popover"
  >
    <span
      className="pf-u-mr-xs"
      style={
        Object {
          "cursor": "pointer",
        }
      }
    >
      <ExclamationTriangleIcon
        color="var(--pf-global--warning-color--100)"
        noVerticalAlign={false}
        size="sm"
      />
    </span>
  </TooltipOrPopover>
  Unsupported text
</span>
`;

exports[`UnsupportedSSGVersion expect to render tooltip 1`] = `
<span
  style={
    Object {
      "display": "inline-block",
      "margin": "1em",
    }
  }
>
  <TooltipOrPopover
    tooltipProps={
      Object {
        "content": <div>
          TOOLTIP TEXT
        </div>,
        "messageVariant": undefined,
      }
    }
    variant="tooltip"
  >
    <span
      className="pf-u-mr-xs"
      style={Object {}}
    >
      <ExclamationTriangleIcon
        color="var(--pf-global--warning-color--100)"
        noVerticalAlign={false}
        size="sm"
      />
    </span>
  </TooltipOrPopover>
  Unsupported text
</span>
`;

exports[`UnsupportedSSGVersion expect to render without error 1`] = `
<span
  style={
    Object {
      "display": "inline-block",
      "margin": "1em",
    }
  }
>
  <TooltipOrPopover
    tooltipProps={
      Object {
        "messageVariant": undefined,
      }
    }
    variant="popover"
  >
    <span
      className="pf-u-mr-xs"
      style={
        Object {
          "cursor": "pointer",
        }
      }
    >
      <ExclamationTriangleIcon
        color="var(--pf-global--warning-color--100)"
        noVerticalAlign={false}
        size="sm"
      />
    </span>
  </TooltipOrPopover>
  Unsupported text
</span>
`;
